# AccelerateRT

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  Manifest.toml  Project.toml  README.md  benchmark.jl  benchmark_notebook.jl  construct.jl  imgui.ini  main.jl  visualize.jl
caches/: README.md
models/: README.md
shaders/: basic.frag.glsl  basic.vert.glsl  bvh.frag.glsl  bvh.vert.glsl  light.frag.glsl  light.vert.glsl  nolit.frag.glsl  nolit.vert.glsl
src/: AccelerateRT.jl  camera.jl  context.cpp  context.hpp  files.jl  main.cpp  math.jl  model.jl  renderer.jl  ui.cpp  utils.jl
src/algorithms/: Algorithms.jl  bvh.jl  bvh_lbvh.jl  bvh_modified.jl  bvh_sah.jl  bvh_simple.jl  structs.jl
structures/: README.md
